--- a/frontend/src/pages/login.css
+++ b/frontend/src/pages/login.css
@@ -17,12 +17,18 @@ body{
   padding: 2.5rem;
   border-radius: 12px;
   box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
- margin-top: 50px;
+ margin-top: 70px;
   
   text-align: center;
   animation: fadeIn 0.4s ease-in-out;
   
 }
+.p{
+  font-size: small;
+  font-weight: 50;
+  
+}
+
 
 @keyframes fadeIn {
   from {
@@ -51,7 +57,7 @@ body{
   
  
   padding: 10px 15px;
-    margin: 10px 0 0 ;
+    /* margin: 10px 0 0 ; */
     
   border: 1px solid #ddd;
   border-radius: 6px;
@@ -70,7 +76,7 @@ body{
 .login-box button {
   width: 100%;
   padding: 10px 0;
-  margin-top: 10px;
+  
   background: #2563eb;
   color: white;
   border: none;
